@@ -1,30 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
-         https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>4.0.0</version>
-        <relativePath/>
+        <relativePath />
     </parent>
-    
+
     <groupId>es.codeurjc</groupId>
     <artifactId>banking-app</artifactId>
     <version>1.0.0</version>
     <name>banking-app</name>
     <description>Banking Application for Software Quality Practice</description>
-    
+
     <properties>
         <java.version>21</java.version>
         <mockito.version>5.5.0</mockito.version>
         <sonar.exclusions>**/DatabaseInitializer.java</sonar.exclusions>
         <sonar.test.exclusions>**/*Test.java,**/*IT.java</sonar.test.exclusions>
     </properties>
-    
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -75,14 +74,14 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-    
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-            
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -97,18 +96,11 @@
                     </archive>
                 </configuration>
             </plugin>
-            
+
+            <!-- Maven Surefire Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>
-                        -javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar
-                        -XX:+EnableDynamicAgentLoading
-                        -Xshare:off
-                        @{argLine}
-                    </argLine>
-                </configuration>
             </plugin>
             
             <plugin>
